<resources>
    <string name="app_name">MyVHC</string>
    <string name="home">Home</string>
    <string name="my_vehicle">My vehicle</string>
    <string name="product">Product</string>
    <string name="agency">Agency</string>
    <string name="mail">Mail</string>
    <string name="guarantee">Guarantee</string>
    <string name="question">Question</string>
    <string name="user_manual">User Manual</string>
    <string name="car">Car</string>
    <string name="motor">Motor</string>
    <string name="setting">Setting</string>
    <string name="introduce">Introduce</string>
    <string name="logout">Logout</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="login">Login</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="do_not_have_an_account_register">Do not have an account? Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_an_account_login">Have an account? Login</string>
    <string name="your_location">Your location</string>
    <string name="motorbike_agency_dealer">Motorbike Agency Dealer</string>
    <string name="car_agency_dealer">Car Agency Dealer</string>
    <string name="cylinder_capacity">Cyclinder capacity</string>
    <string name="frame_number">Frame number</string>
    <string name="warranty_infomation">Warranty infomation</string>
    <string name="order_for_service">Order for service</string>
    <string name="more_detail">More detail</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="color">Color</string>
    <string name="replace_parts">Replace parts</string>
    <string name="standard_warranty_information">Standard warranty information</string>
    <string name="warranty_extension_package_information">Warranty extension package information</string>
    <string name="most_recent_date_of_routine_check">Most recent date of routine check</string>
    <string name="expiration_date_of_next_routine_check">Expiration date of next routine check</string>
    <string name="periodic_inspection_information_pi">Periodic inspection information (PI)</string>
    <string name="detail_and_order_for_service">Detail and Order for service</string>
    <string name="spare_parts_replacement_reminder">Spare parts replacement reminder</string>
    <string name="your_vehicle_does_not_have_insurance_information_please_update_to_receive_due_date_information">Your vehicle does not have insurance information, please update to receive due date information.</string>
    <string name="repair_history">Repair history</string>
    <string name="create_new">Create new</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="details_and_booking_service">Details and booking service</string>
    <string name="please_enter_frame_number_vin">Please enter frame number-VIN</string>
    <string name="instructions_for_getting_the_frame_number">Instructions for getting the frame number</string>
    <string name="enter_frame_number_or_barcode">Enter frame number or barcode</string>
    <string name="get_frame_number_by_barcode">Get frame number by Barcode</string>
    <string name="the_barcode_is_attached_to_the_service_document_bag_in_the_trunk">The barcode is attached to the service document bag in the trunk.</string>
    <string name="get_frame_number_directly_on_motorcycle">Get frame number directly on motorcycle</string>
    <string name="if_you_can_t_find_the_frame_number">If you can\'t find the frame number</string>
    <string name="frame_numbers_can_be_found_in_the_following_locations">Frame numbers can be found in the following locations:</string>
    <string name="steering_neck_position">Steering neck position</string>
    <string name="position_near_the_rear_handlebar_under_the_saddle">Position near the rear handlebar, under the saddle</string>
    <string name="position_under_the_motorcycle">Position under the motorcycle</string>
    <string name="please_refer_to_the_user_s_manual_or_contact_0967070842">Please refer to the User\'s Manual or contact 0967070842</string>
    <string name="distance">Distance</string>
    <string name="location">Location</string>
    <string name="phone_number">Phone number</string>
    <string name="work_time">Work time</string>
    <string name="add_to_favorite_list">Add to favorite list</string>
    <string name="chosen_motor">Chosen Motor</string>
    <string name="chosen_agency">Chosen Agency</string>
    <string name="chosen_time">Chosen Time</string>
    <string name="periodic_inspection">Periodic inspection</string>
    <string name="repair">Repair</string>
    <string name="add_a_description_of_the_vehicle_s_fault_the_detailed_description_helps_the_dealer_better_prepare_to_take_care_of_your_vehicle">Add a description of the vehicle\'s fault. The detailed description helps the dealer better prepare to take care of your vehicle</string>
    <string name="your_car_details">Your car details</string>
    <string name="actual_pictures_of_the_car">Actual pictures of the car</string>
    <string name="brand">Brand</string>
    <string name="chassis_number">Chassis Number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="choose_vehicle">Choose Vehicle</string>
    <string name="please_select_a_date">Please select a date</string>
    <string name="please_select_a_time">Please select a time</string>
    <string name="honda_dealer">Honda dealer</string>
    <string name="customer">Customer</string>
    <string name="service">Service</string>
    <string name="vehicle">Vehicle</string>
    <string name="user_s_vehicle">User\'s vehicle</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="add_agency">Add agency</string>
    <string name="add_customer_vehicle">Add customer vehicle</string>
    <string name="add_service">Add service</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="not_yet">Not yet</string>
    <string name="price">Price</string>
    <string name="address">Address</string>
    <string name="agency_id">Agency Id</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="name">Name</string>
    <string name="customer_id">Customer Id</string>
    <string name="license_plates">License Plates</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="vehicle_id">Vehicle Id</string>
    <string name="creation_date">Creation Date</string>
    <string name="describe">Describe</string>
    <string name="image">Image</string>
    <string name="booked_hour">Booked Hour</string>
    <string name="booked_date">Booked Date</string>
    <string name="status">Status</string>
    <string name="agency_list">Agency List</string>
    <string name="please_add_your_car">Please add your car</string>
    <string name="add_your_chassis_number_vin_to_view_vehicle_details">Add your chassis number - VIN to view vehicle details.</string>

</resources>