<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_guaran"
        android:icon="@drawable/ic_guaran"
        app:showAsAction="never"
        android:title="@string/guarantee"/>

    <item
        android:id="@+id/nav_question"
        android:icon="@drawable/ic_question"
        app:showAsAction="never"
        android:title="@string/question"/>

    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/ic_setting"
        app:showAsAction="never"
        android:title="@string/setting"/>

    <item
        android:id="@+id/nav_introduce"
        android:icon="@drawable/ic_introduce"
        app:showAsAction="never"
        android:title="@string/introduce"/>

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        app:showAsAction="never"
        android:title="@string/logout"/>

    <item
        android:id="@+id/user_manual"
        android:title="@string/user_manual"
        app:showAsAction="never">

        <menu>

            <item
                android:id="@+id/nav_car"
                android:icon="@drawable/ic_baseline_directions_car_24"
                android:title="@string/car"/>

            <item
                android:id="@+id/nav_motor"
                android:icon="@drawable/ic_motor"
                android:title="@string/motor"/>

        </menu>

    </item>

</menu>