<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/home"
            android:id="@+id/home"
            app:showAsAction="ifRoom"
            android:icon="@drawable/ic_baseline_home_24"/>
    <item android:title="@string/my_vehicle"
            android:id="@+id/vehicle"
            app:showAsAction="ifRoom"
            android:icon="@drawable/ic_baseline_key_24"/>
    <item android:title="@string/product"
            app:showAsAction="ifRoom"
            android:id="@+id/product"
            android:icon="@drawable/ic_baseline_directions_car_24"/>
    <item android:title="@string/agency"
        app:showAsAction="ifRoom"
        android:id="@+id/agency"
        android:icon="@drawable/ic_baseline_location_on_24"/>
    <item android:title="@string/mail"
        app:showAsAction="ifRoom"
        android:id="@+id/mail"
        android:icon="@drawable/ic_baseline_mail_outline_24"/>
</menu>