<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="50dp"
    tools:context=".admin.bottom_sheet.AddAgencySheetFragment">

    <TextView
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/agency"
        android:textSize="30sp" />


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/agencyAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/address" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/agencyLatitude"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/latitude"
            android:inputType="numberDecimal">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/agencyLongitude"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/longitude"
            android:inputType="numberDecimal">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/agencyName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/agencyPhoneNum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone_number"
            android:inputType="number">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/agencyWorkTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/work_time">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/button_rectangle_invisible"
        android:gravity="center"
        android:paddingVertical="5dp"
        android:text="@string/add"
        android:textSize="20sp" />

</LinearLayout>