<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    tools:context=".admin.activity.AdminAgencyDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:padding="15dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/icon_color" />

        <ImageView
            android:id="@+id/btnLogout"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/icon_color" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerLayout">

        <androidx.cardview.widget.CardView
            android:id="@+id/tableLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow>

                        <TextView
                            android:background="@color/background_2"
                            android:padding="10dp"
                            android:text="@string/address"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtAgencyAddress"
                            android:padding="10dp"
                            android:text="37 Điện Biên Phủ, Chính Gián, Thanh Khê, Đà Nẵng" />

                    </TableRow>

                    <TableRow>

                        <TextView
                            android:background="@color/background_2"
                            android:padding="10dp"
                            android:text="@string/agency_id"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtAgencyId"
                            android:padding="10dp"
                            android:text="01/01/2000" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:background="@color/background_2"
                            android:padding="10dp"
                            android:text="@string/latitude"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtAgencyLnt"
                            android:padding="10dp"
                            android:text="01/01/2000" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:background="@color/background_2"
                            android:padding="10dp"
                            android:text="@string/longitude"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtAgencyLng"
                            android:padding="10dp"
                            android:text="01/01/2000" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:background="@color/background_2"
                            android:padding="10dp"
                            android:text="@string/name"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtAgencyName"
                            android:padding="10dp"
                            android:text="01/01/2000" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:background="@color/background_2"
                            android:padding="10dp"
                            android:text="@string/phone_number"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtAgencyPhone"
                            android:padding="10dp"
                            android:text="46.160.000 VNĐ" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:background="@color/background_2"
                            android:padding="10dp"
                            android:text="@string/work_time"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtAgencyWorkTime"
                            android:padding="10dp"
                            android:text="46.160.000 VNĐ" />
                    </TableRow>

                </TableLayout>

            </HorizontalScrollView>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_rectangle_invisible"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:text="@string/update"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/btnDelete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tableLayout" />

        <TextView
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_rectangle_invisible"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:text="@string/delete"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnUpdate"
            app:layout_constraintTop_toBottomOf="@id/tableLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>