<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#343434"
    tools:context=".authActivity.LogInActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/top_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="100dp"
                android:text="@string/login"
                android:textColor="#fff"
                android:textSize="40sp"
                android:textStyle="bold"

                />

            <EditText
                android:id="@+id/txtPhone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:autofillHints=""
                android:background="@drawable/edittext_background_login"
                android:drawableStart="@drawable/baseline_phone_24"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone"
                android:maxEms="10"
                android:padding="8dp"
                android:textColorHint="#fff" />

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:autofillHints=""
                android:background="@drawable/edittext_background_login"
                android:drawableStart="@drawable/baseline_password_24"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxEms="10"
                android:padding="8dp"
                android:textColorHint="#fff" />

            <ImageView
                android:id="@+id/imgLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="16sp"
                android:src="@drawable/btn_login" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSIWGoogle"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/background_btn_login"
                android:drawableStart="@drawable/google"
                android:drawablePadding="16dp"
                android:padding="16dp"
                android:text="@string/sign_in_with_google"
                android:textColor="#fff"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/do_not_have_an_account_register"
                android:textAlignment="center"
                android:textColor="#E1A500"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>